# usb-can-tauri

./: .gitignore  3D-SCENE-IMPLEMENTATION.md  CSV_DATA_PARSING_GUIDE.md  CSV_DATA_PREVIEW_PARSING.md  GIMBAL_LOCK_FIX.md  README-3D-FINAL.md  README-3D-MODEL.md  README-BUILD-SUCCESS.md  README-CROSS-PLATFORM-BUILD.md  README-integration.md  README.md  STEERING_DIRECTION_FIX.md  STEERING_RATIO_IMPLEMENTATION.md  SUSPENSION_ANIMATION_CORRECTED.md  SUSPENSION_ANIMATION_FINAL.md  SUSPENSION_ANIMATION_FINAL_FIX.md  SUSPENSION_ANIMATION_IMPLEMENTATION.md  SUSPENSION_ANIMATION_SUMMARY.md  SUSPENSION_FIX_SUMMARY.md  USER_MANUAL.md  VEHICLE_DYNAMICS_IMPLEMENTATION.md  index.html  package-lock.json  package.json  parse_monitor_data.py  pnpm-lock.yaml  system-monitor.html  vite.config.ts
docs/: ThunderSoftSendingCommnad.xlsx  test_data.csv  test_data_full_cal.csv  上位机协议CAN.docx
public/: 3D-DOOR-BUTTONS-README.md  CAN-CONFIG-GUIDE.md  basic-3d-test.html  simple-button-test.html  test-door-buttons.html
python-test/: backup.py  can_output6.csv  can_output8.csv  can_output9.csv  check-config.py  data_conversion.py  data_final_mock.py  driving_data.csv  final_convert.py  generator.py  hex_converter.py  image_converter.py  input.csv  loop-c.py  mock_data.py  mock_origin.py  (+13 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  system-monitor.json
src-tauri/icons/: icon.icns  osyx-branco-color.icns
src-tauri/src/: can_protocol.rs  commands.rs  csv_loop.rs  infinite_loop.rs  io_thread.rs  lib.rs  main.rs  system_monitor_thread.rs  vehicle_control.rs
(+105 files in other folders)
